add database function

--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -2,12 +2,15 @@
     background-color:honeydew;
   }
   
-  #theme{
+  .theme{
     font-family: cursive;
   }
   
   .container{
-    padding:20px;
+  }
+  
+  .container-main{
+    margin-top:90px
   }
   
   .person{
@@ -30,3 +33,39 @@
   .submitButtonArea{
     padding:10px;
   }
+  
+  header {
+  height: 65px;
+  width: 100%;
+  background-color: rgba(34, 49, 52, 0.9);
+  position :fixed;
+  top: 0;
+  z-index: 10;
+}
+
+.header-left {
+  float: left;
+}
+
+.header-right {
+  float: right;
+  margin-right: -25px;
+}
+
+header .theme {
+	line-height:65px;
+}
+
+.header-right a {
+  line-height: 65px;
+  padding: 0 25px;
+  color: white;
+  display: block;
+  float: left;
+  transition: all 0.5s;
+}
+
+.header-right a:hover {
+  background-color: rgba(255, 255, 255, 0.3);
+}
+
