--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -1,5 +1,6 @@
   body{
     background-color:honeydew;
+    color: darkslategrey;
   }
   
   .theme{
@@ -10,11 +11,16 @@
   }
   
   .container-main{
-    margin-top:90px
+    margin-top:90px;
+  }
+  
+  .inputYenArea{
+    margin-top:50px;
   }
   
   .person{
-    background-color:lightgreen;
+    border:solid lightgreen;
+    border-radius: 10px;
     padding:10px;
     margin-top:5px;
     margin-bottom:5px;
@@ -68,4 +74,48 @@ header .theme {
 .header-right a:hover {
   background-color: rgba(255, 255, 255, 0.3);
 }
+/* モーダルCSS */
+.modalArea {
+  display: none;
+  position: fixed;
+  z-index: 10; /*サイトによってここの数値は調整 */
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.modalBg {
+  width: 100%;
+  height: 100%;
+  background-color: rgba(30,30,30,0.9);
+}
+
+.modalWrapper {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform:translate(-50%,-50%);
+  width: 70%;
+  max-width: 500px;
+  padding: 20px 30px;
+  background-color: #fff;
+}
+
+.closeModal {
+  position: absolute;
+  top: 0.5rem;
+  right: 1rem;
+  cursor: pointer;
+}
+
+.signup input {
+	margin:5px 0px;
+}
+
+#signUpMessage {
+	color:red;
+}
+
+
 
