--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -197,9 +197,9 @@
                   <div class="resultButtonArea">
                    <button type="button" class="btn btn-outline-danger modalBgResult">了解！</button>
                   </div>
-<!--                   <div class="line-it-button" data-lang="ja" data-type="share-c" data-url="http://localhost:8090/" style="display: none;">あああ</div> -->
-<!--                   <script src="https://d.line-scdn.net/r/web/social-plugin/js/thirdparty/loader.min.js" async="async" defer="defer"></script> -->
-                  <a href="http://line.me/R/msg/text/?あああ"><img src="/image/share-a.png"></a>
+                  <div class="lineAPIArea">
+                  <a id="lineAPI" href=><img id="lineAPIImg" src="/image/share-a.png"></a>
+                  </div>
                 </div>
                 <div id="closeModalResult" class="closeModal">
                   ×
