--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -11,13 +11,13 @@
   <style>
   
   </style>
-<title>TATEKAE</title>
+<title>WARIKAN</title>
 </head>
 <body>
 <header>
     <div class="container">
       <div class="header-left">
-        <span class="theme">TATEKAE</span>
+        <span class="theme">WARIKAN</span>
       </div>
       <!-- ここにメニューアイコンを追加してください -->
       
@@ -35,7 +35,7 @@
     </div>
 </header>
 <div class="container container-main"  th:inline="text">
-    <h1 class="theme">TATEKAE</h1>
+    <h1 class="theme">WARIKAN</h1>
     <span>旅費の立替金を精算するための世界一シンプルなツールです</span>
     <div class="panel panel-default">
       <div class="panel-body">
