--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -11,13 +11,13 @@
   <style>
   
   </style>
-<title>TATEKAE</title>
+<title>WARIKAN</title>
 </head>
 <body>
 <header>
     <div class="container">
       <div class="header-left">
-        <span class="theme">TATEKAE</span>
+        <span class="theme">WARIKAN</span>
       </div>
       <!-- ここにメニューアイコンを追加してください -->
       
@@ -35,7 +35,7 @@
     </div>
 </header>
 <div class="container container-main"  th:inline="text">
-    <h1 class="theme">TATEKAE</h1>
+    <h1 class="theme">WARIKAN</h1>
     <div>
       <h3 style="color:red;">エラーが発生しました。</h3>
       <th:block th:if="${errorForm}!=null">
